--- a/src/components/cardsonConnect/cardsconnect.css
+++ b/src/components/cardsonConnect/cardsconnect.css
@@ -13,17 +13,18 @@
 }
 #cardsconnect{
   background-image: url(../../assets/roboto\ nft\ assets/about-bg.png);
-        height: 110vh;
+        height: 135vh;
         background-size: 100% 132%;
         /* background-repeat: "no-repeat" !important; */
     width: 100%;
     background-repeat: no-repeat;
     background-position-y: bottom;
     background-size: contain;
+    margin-top: -7rem;
 }
 .card {
   margin: 30px auto;
-  width: 300px;
+  width: 250px;
   height: 320px;
   border-radius: 11px;
 box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
@@ -34,7 +35,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   border-color: #0C1606;
 }
 .logonft{
-  height: 114px;
+  /* height: 114px; */
     width: 37%;
     background-color: green;
     padding: 6%;
@@ -81,14 +82,50 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 .title-black {
   color: black;
 }
-
-@media (max-width: 600px) {
- 
+@media only screen and (max-width:1440px) {
   #cardsconnect{
-    margin-bottom: 700px;
-  background-image: none;
-
+    height: 107vh;
   }
+
+}
+@media (max-width:1370px) {
+  #cardsconnect {
+    height: 120vh;
+  }
+}
+@media only screen and (max-width:1280px) {
+  #cardsconnect{
+    height:87vh !important;
+  }
+}
+@media (max-width:1100px) {
+  #cardsconnect {
+    height: 165vh;
+}
+  /* #cardsconnect {
+    height: 62vh;
+  } */
+}
+@media (max-width: 950px){
+    #cardsconnect{
+      height: 78vh !important; 
+    }
+    .cardsText{
+      margin-top: 0rem !important;
+    }
+}
+@media (max-width:800px) {
+  #cardsconnect {
+    height: 100vh !important;
+}
+}
+@media (max-width:600px) {
+  .cardsText{
+    margin-top: -1rem !important;
+  }
+  #cardsconnect {
+    height: 132vh !important;
+}
 }
 @media (max-width: 500px) {
   .card-list {
@@ -96,16 +133,27 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
     flex-direction: column;
   }
   .cardsText{
+    margin-top: -1rem !important;
     font-size: 5.3vw;
   }
   #cardsconnect{
-    margin-bottom: 600px;
-  background-image: none;
-
+    margin-bottom: -18rem;
+    height: 182vh !important;
   }
 }
 
-
+@media (max-width:400px) {
+#cardsconnect {
+    margin-bottom: -18rem;
+    height: 220vh !important;
+}
+}
+@media (max-width:375px) {
+  #cardsconnect {
+    margin-bottom: -18rem;
+    height: 250vh !important;
+}
+}
 /*
 .card {
   margin: 30px auto;
